# gherkbot

./: .gitignore  README.md  mermaid_diagram.md  pyproject.toml
.github/workflows/: publish.yml
diagrams/: gherkin_parser_workflow.d2
examples/: example.feature
src/gherkbot/: __init__.py  cli.py  converter.py  parser.py  strategies.py  synchronizer.py
tests/: test_cli.py  test_converter.py  test_parser.py  test_synchronizer.py
