[project]
name = "gherkbot"
version = "0.1.5"
description = "A tool to convert Gherkin feature files to Robot Framework format."
readme = "README.md"
authors = [{ name = "schlich", email = "ty.schlich@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "gherkin-official>=32.1.2",
    "pydantic>=2.11.5",
    "robotframework>=7.3",
    "typer>=0.16.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Robot Framework",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/schlich/gherkbot"
Documentation = "https://github.com/schlich/gherkbot#readme"
Issues = "https://github.com/schlich/gherkbot/issues"
Repository = "https://github.com/schlich/gherkbot"

[project.scripts]
gherkbot = "gherkbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "basedpyright",
    "pyrefly",
    "ty",
    "hypothesis>=6.135.2",
    "pytest-watcher>=0.4.3",
    "ruff>=0.11.13",
    "pytest-mock>=3.14.1",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
